# OpenGLRenderer

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: CmakeLists.txt  glad.c  main.cpp
